Fix issue which caused the access token to overflow the box #10069
Added Comments for code

--- a/res/css/views/settings/tabs/user/_HelpUserSettingsTab.pcss
+++ b/res/css/views/settings/tabs/user/_HelpUserSettingsTab.pcss
@@ -15,6 +15,11 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 
+/*
+     overflow-x and overflow-y is set to scrollable for 
+     .max_CopyableText class under div tag which is for Access Key
+     field, So it won't go outside boundary.
+*/
 .mx_HelpUserSettingsTab {
     code {
         word-break: break-all;
